--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,9 +33,9 @@
       "@controllers/*": ["src/controllers/*"],
       "@database/*": ["src/database/*"],
       "@interfaces/*": ["src/interfaces/*"],
-      "@middleware/*": ["src/middleware/*"],
-      "@repositories/*": ["src/repositories/*"],
+      "@models/*": ["src/models/*"],
       "@routes/*": ["src/routes/*"],
+      "@schemas/*": ["src/schemas/*"],
       "@services/*": ["src/services/*"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
